{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 24,
  "lineage": "0b312dba-5622-83b8-2edb-83518fc599a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d38bce54cd437b7c",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-06e4ea13114e2fa4b"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700361031826:route-table/rtb-058c14399a44b19d1",
            "id": "rtb-058c14399a44b19d1",
            "owner_id": "700361031826",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route"
            },
            "tags_all": {
              "Name": "private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4ea13114e2fa4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700361031826:subnet/subnet-00d05fae1009a1265",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.3.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d05fae1009a1265",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700361031826",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesubnet1"
            },
            "tags_all": {
              "Name": "privatesubnet1"
            },
            "vpc_id": "vpc-06e4ea13114e2fa4b"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700361031826:subnet/subnet-04dafebe3d0ab4908",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dafebe3d0ab4908",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700361031826",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicsubnet1"
            },
            "tags_all": {
              "Name": "publicsubnet1"
            },
            "vpc_id": "vpc-06e4ea13114e2fa4b"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:700361031826:vpc/vpc-06e4ea13114e2fa4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0625908aeb95ce8d3",
            "default_route_table_id": "rtb-060cc9f8d227f34c3",
            "default_security_group_id": "sg-0e6f7f66f661e3ea1",
            "dhcp_options_id": "dopt-04b2f2193ec692951",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e4ea13114e2fa4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060cc9f8d227f34c3",
            "owner_id": "700361031826",
            "tags": {
              "Name": "myVPC"
            },
            "tags_all": {
              "Name": "myVPC"
            }
          }
        }
      ]
    }
  ]
}